--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     },
 
     "background": {
-        "scripts": ["eventsPage.js"],
+        "scripts": ["immutableTabs.js"],
         "persistent": true
     },
 
