--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,14 @@
     "description": "This extension will lock the page a pinned tab is on.",
     "version": "1.0",
 
+    "icons": {
+      "16": "icon16.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
+    },
+
     "browser_action": {
-        "default_icon": "icon.png"
+        "default_icon": "icon16.png"
     },
 
     "background": {
