--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,7 @@
 
     "permissions": [
       "tabs",
+      "webNavigation",
       "webRequest",
       "webRequestBlocking",
       "<all_urls>"
