fix description, again.

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
 
     "name": "Immutable Pinned Tabs",
-    "description": "An extension that will make your pinned tabs immutablee.",
+    "description": "An extension that will make your pinned tabs immutable. Once you pin a tab, you can no longer navigate away from the page it is on!",
     "version": "1.0.1",
 
     "icons": {
