--- a/manifest.json
+++ b/manifest.json
@@ -6,13 +6,13 @@
     "version": "1.0.1",
 
     "icons": {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
     },
 
     "browser_action": {
-        "default_icon": "icon16.png"
+        "default_icon": "icons/icon16.png"
     },
 
     "background": {
